--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ h1 {
     border: 8px dashed #ccc;
     border-radius: 8px;
     margin-bottom: 16px;
+    min-height: 240px;
     display: flex;
 }
 #holder.hover {
